libpqxx (2.1.3-1) stable; urgency=low

  * New upstream release.

 -- Jeroen T. Vermeulen <jtv@xs4all.nl>  Fri, 21 Nov 2003 19:30:00 +0100

libpqxx (2.0.0-1) unstable; urgency=low

  * New upstream release.
  * Added myself as the new maintainer of libpqxx.
  * Merge upstream Debian packaging changes:
    - 1.7.6-1: Example packaging to be used with libpqxx development version
               1.7.6 (Greg Hookey).
    - 1.9.6-1: Source changes (Jeroen T. Vermeulen).
    - 2.0.0-1: [debian/control, dedian/rules] Use chrpath to get rid of RPATH
               in the shared library (J.H.M. Dassen (Ray))
  * Merge changes made in pervious NMUs (Closes: #217203, #198441, #201263)
  * Added the new tutorial to libpqxx-dev.

 -- Roger Leigh <rleigh@debian.org>  Thu, 20 Nov 2003 21:09:06 +0000

libpqxx (1.5.1-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * Include test/*.cxx as usage examples in libpqxx-dev (Closes: #217203).

 -- Roger Leigh <rleigh@debian.org>  Mon, 27 Oct 2003 22:23:31 +0000

libpqxx (1.5.1-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add API reference documentation to libpqxx-dev
    (Closes: #198441, #201263).
  * Use dh_install instead of the old dh_movefiles, to enable
    copying of the HTML documentation.
  * Use DESTDIR rather than prefix for make install, since
    overriding prefix may cause subtle breakage.
  * /usr/share/doc/libpqxx-dev may no longer be a symbolic link.
    libpqxx now has a preinst script to remove the link if it is
    detected, to prevent the documentation being incorrectly
    installed under /usr/share/doc/libpqxx0 (since dpkg follows
    symbolic links).
  * CVS directories present in the upstream tarball are removed
    in the debian/rules clean rule, to prevent inclusion in a
    binary package.
  * Fold lines over 79 columns in debian/copyright.
  * Change section of libpqxx-dev from libs to libdevel.

 -- Roger Leigh <rleigh@debian.org>  Thu,  4 Sep 2003 23:49:17 +0100
