@@ -1,1 +1,0 @@
-debian/tmp/usr/lib/lib*.so.*
